fixed menu spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,15 +5,10 @@
 }
 
 /* Logo menu bar */
-.navbar-brand, .navbar-nav li.nav-item a.nav-link {
-	height: inherit;
-	line-height: 50px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-}
-
 .navbar-brand img {
 	max-height: 45px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 /* Headers */
